updated analyzer